discussion/kv_engine/168655/168655_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add go test program to test certificate authentication

[WIP]

Change-Id: Ied953e20b246c1df92510d52c768cc52d42bfa63

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-01-13 07:37:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-13 08:06:36.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14786/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_cert_tests.cc:268:18: error: incomplete type "ProcessMonitor" named in nested name specifier [clang-diagnostic-error]
    auto child = ProcessMonitor::create(argv, [&status, &json](auto& ec) {
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp.h:55:7: note: forward declaration of "ProcessMonitor"
class ProcessMonitor;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14786/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_cert_tests.cc:268:18:
error: incomplete type "ProcessMonitor" named in nested name specifier [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14786/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15593/ : FAILURE

Compile error at [2022-01-13T07:39:43.011Z] _cgo_export.c:3:10:
fatal error: "stdlib.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15593/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4432/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4432/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16742/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24866/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24866/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36242/ : UNSTABLE

Clang Analyser identified one or more potential bugs - see <a href="clangScanBuildBugs">clangScanBuildBugs</a> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36242/ )

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36242/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13632/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42771/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17539/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16452/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
